# robostud

./: .gitignore  README.md
amcl_localisation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
amcl_localisation/config/: amcl_params.yaml
amcl_localisation/launch/: amcl_launch.py
aruco_gazebo/: folder_maker.py
aruco_gazebo/box_0/: model.config  model.sdf
aruco_gazebo/box_0/meshes/: aruco_box_0_.dae
aruco_gazebo/box_1/: model.config  model.sdf
autonomous_robot/map/: ground_truth.yaml  real_warehouse.yaml
autonomous_robot/src/: localizer_and_navigation.cpp
cylinder_filter/: CMakeLists.txt  package.xml
cylinder_filter/src/: cylinder_filter_node.cpp
dead_reckoning_cpp/: CMakeLists.txt
dead_reckoning_cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dead_reckoning_cpp/log/: latest_build
dead_reckoning_cpp/src/: dead_reckoning_node.cpp
dead_reckoning_py/: package.xml  setup.cfg  setup.py
dead_reckoning_py/dead_reckoning_py/: dead_reckoning.py
goal_sender/: CMakeLists.txt  package.xml
goal_sender/src/: goal_sender.cpp  goals.txt
map_comparator/: CMakeLists.txt
mission/: goals.json  stocktake.txt
office_world/: office_world.launch.py  turtlebot3_office.world
send_goals/: goals.json  send.py
sml_graph/sml_graph/output/: rmse_report.md  yaw_data.csv
sprint1/: CMakeLists.txt  package.xml
sprint1/src/: laser_filter_node.cpp
sprint3/src/: filter_cylinder.cpp  index.dox  place_cylinder.cpp
sprint3/src/html/: annotated.html  classFilterCylinderNode-members.html  classFilterCylinderNode.html  classFilterCylinderNode__coll__graph.map  classFilterCylinderNode__coll__graph.md5  classPlaceCylinderNode-members.html  classPlaceCylinderNode.html  classPlaceCylinderNode__coll__graph.map  classPlaceCylinderNode__coll__graph.md5  classes.html  functions.html  functions_func.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html
sprint3/src/latex/: annotated.tex  classFilterCylinderNode.tex  index.tex  (+5 more)
sprint_2_localiser/src/: scan_matching_localiser.cpp
turtlebot_color_detector/: CMakeLists.txt
turtlebot_color_detector/src/: turtlebot_color_detector.cpp
warehouse_navigation/launch/: warehouse.launch.py
warehouse_navigation/map/: real_warehouse.yaml
week_1_lab/: CMakeLists.txt  package.xml
week_1_lab/src/: camera_subscriber.cpp
week_2_lab/: CMakeLists.txt  package.xml
week_2_lab/src/: laser_scan_subscriber.cpp
yaw_grapher/: README.md  package.xml  setup.cfg  setup.py
yaw_grapher/yaw_grapher/: yaw_grapher.py
(+18 files in other folders)
